--- a/api.html
+++ b/api.html
@@ -11,7 +11,9 @@
   <link rel="stylesheet" type="text/css" href="plugins/bootstrap/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="plugins/fontawesome/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="plugins/datetimepicker/datetimepicker.min.css">
-  <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.7.94/css/materialdesignicons.min.css">
+  <!-- <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.7.94/css/materialdesignicons.min.css"> -->
+  <link rel="stylesheet" href="plugins/aos/aos.css">
+  <link rel="stylesheet" href="plugins/themify-icons/themify-icons.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -20,46 +22,57 @@
   <div class="container-scroller">
   
 
-<nav class="navbar horizontal-layout col-lg-12 col-12 p-0">
-  <div class="container d-flex flex-row">
-    <div class="text-center navbar-brand-wrapper d-flex align-items-top">
-      <a class="navbar-brand" href="/">
-        <!-- <img src="https://perfectcdn.com/449c0709-30d5-4529-8d98-a6c1002c7c0d/" alt="logo" title="logo"> -->
-        SMM
-      </a>
-    </div>
-
-    <div class="navbar-menu-wrapper d-flex align-items-center">
-      <ul class="navbar-nav navbar-nav-right ml-auto mr-0">
-      </ul>
-      <button class="navbar-toggler align-self-center" type="button" data-toggle="minimize">
-        <span class="mdi mdi-menu"></span>
-      </button>
-    </div>
-
-  </div>
-  <div class="nav-bottom">
-    <div class="container">
-      <ul class="nav page-navigation" data-navigation>
-        <li class="nav-item ">
-          <a href="index.html" class="nav-link"><i class="link-icon mdi mdi-home"></i><span class="menu-title">HOME</span></a>
+<!-- Navbar Start -->
+<nav class="main-nav navbar navbar-expand-lg fixed-top">
+  <div class="container">
+    <!-- Logo -->
+    <a class="navbar-brand" href="index.html">
+      <!-- <img src="images/logo.png" alt="logo"> -->
+      SMM.net
+    </a>
+    <!-- Toogle Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav">
+      <span class="ti-menu">
+      </span>
+    </button>
+    <div class="collapse navbar-collapse nav-list" id="mainNav">
+      <!-- Navigation Links -->
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
         </li>
-
-        <li class="nav-item ">
-          <a href="services.html" class="nav-link"><i class="link-icon mdi mdi-view-list"></i><span class="menu-title">SERVICES</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="services.html">Service</a>
         </li>
-
-        <li class="nav-item active">
-          <a href="api.html" class="nav-link"><i class="link-icon mdi mdi-cube-outline"></i><span class="menu-title">API</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="api.html">API</a>
         </li>
-
-        <li class="nav-item ">
-          <a href="signup.html" class="nav-link"><i class="link-icon mdi mdi-account-plus"></i><span class="menu-title">SIGN UP</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="signup.html">Sign Up</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+<!-- Navbar End -->
+
+<section class="page__header">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h1 class="page__title">We Care About You</h1>
+                <ul class="list-inline page__breadcrumb">
+                    <li class="list-inline-item">
+                        <a href="index.html">Home ></a>
+                    </li>
+                    <li class="list-inline-item">
+                        API
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
 
   <!-- Main variables *content* -->
   <div class="container-fluid page-body-wrapper">
@@ -87,7 +100,7 @@
 
                   <li class="list-group-item d-flex justify-content-between align-items-center">
                     <span>Download Examples</span>
-                    <a href="/example.txt" target="_blank" class="btn btn-sm btn-primary"><i class="mdi mdi-download"></i>.php</a>
+                    <a href="/example.txt" target="_blank" class="btn btn-sm btn-primary"><i class="fa fa-download"></i>.php</a>
                   </li>
                 </ul>
               </div>
@@ -568,7 +581,7 @@
                         <span class="d-block text-center text-sm-left d-sm-inline-block">Copyright © 2018 <a href="/"
                                 class="text-primary-theme">SMM.net</a>.
                             All rights reserved.</span>
-                        <span><a href="/terms.html" class="text-primary-theme">Terms of Service</a> | <a href="/faq.html" class="text-primary-theme">Frequent
+                        <span><a href="terms-conditions.html" class="text-primary-theme">Terms of Service</a> | <a href="faq.html" class="text-primary-theme">Frequent
                                 Asked Questions</a></span>
                     </div>
                 </div>
@@ -582,6 +595,10 @@
 <script type="text/javascript" src="plugins/moment/moment.min.js"></script>
 <script type="text/javascript" src="plugins/datetimepicker/datetimepicker.min.js"></script>
 <script type="text/javascript" src="plugins/bootstrap/bootstrap.js"></script>
+<script type="text/javascript" src="plugins/smooth-scroll/smooth-scroll.js"></script>
+<script type="text/javascript" src="plugins/headroom/headroom.js"></script>
+<script type="text/javascript" src="plugins/aos/aos.js"></script>
+<script type="text/javascript" src="plugins/match-height/match-height.js"></script>
 <script src='https://www.google.com/recaptcha/api.js?hl=en'></script>
 <!-- Main Script -->
 <script type="text/javascript" src="js/script.js"></script>
