--- a/api.html
+++ b/api.html
@@ -558,8 +558,8 @@
 
 <footer class="container-fluid footer">
     <div class="row py-4 footer-bottom">
-        <div class="col-12 text-center mb-5">
-            <a href="#" class="footer-logo">
+        <div class="col-12 text-center mb-3">
+            <a href="#" class="footer-logo text-white">
                 SMM.NET
             </a>
         </div>
@@ -567,21 +567,21 @@
             <div class="container-fluid clearfix">
                 <div class="row">
                     <div class="col-md-12">
-                        <b>Our contacts: </b>
-                        <span><a href="skype:ssm.net?call" class="text-primary-theme"><i class="mdi mdi-skype"></i> Skype
+                        <b class="text-white">Our contacts: </b>
+                        <span><a href="skype:ssm.net?call"><i class="mdi mdi-skype"></i> Skype
                                 :
                                 ssm.net</a></span>
-                        <span><a href="mailto:SMM.net@gmail.com" class="text-primary-theme"><i class="mdi mdi-email"></i>
+                        <span><a href="mailto:SMM.net@gmail.com"><i class="mdi mdi-email"></i>
                                 Email :
                                 SMM.net@gmail.com</a></span>
                     </div>
                 </div>
                 <div class="row mt-4">
                     <div class="col-md-12">
-                        <span class="d-block text-center text-sm-left d-sm-inline-block">Copyright © 2018 <a href="/"
-                                class="text-primary-theme">SMM.net</a>.
+                        <span class="d-block text-center text-sm-left d-sm-inline-block text-white">Copyright © 2018 <a href="/"
+                                >SMM.net</a>.
                             All rights reserved.</span>
-                        <span><a href="terms-conditions.html" class="text-primary-theme">Terms of Service</a> | <a href="faq.html" class="text-primary-theme">Frequent
+                        <span><a href="terms-conditions.html">Terms of Service</a> | <a href="#" >Frequent
                                 Asked Questions</a></span>
                     </div>
                 </div>
