--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
     </div>
 </section>
 
-<section class="social-box section">
+<section class="social-box section bg-white">
     <div class="container" id="social-boxes">
         <div class="row">
             <div class="col-md-12 text-center px-5">
-                <h2 class="h1 nice-title mb-3">The <span>#1</span> and ONLY <span>SMM Panel</span> that you will need!</h2>
+                <h2 class="h1 nice-title mb-3">The #1 and ONLY SMM Panel that you will need!</h2>
                 <p class="w-75 mx-auto mb-5">
                     Tired of looking at hundreds of panels with services that simple
                     doesnt work? Check our major services for social media with the best quality and quicker delivery on the market!
@@ -115,10 +115,10 @@
             </div>
             <div class="col-md-12">
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4 grid-margin stretch-card">
-                        <div class="card card-icon-top">
-                            <div class="card-body">
-                                <img src="http://buyrealfollowerz.com/images/icon-facebook.png" alt="image" class="card-icon">
+                    <div class="col-12 col-md-6 col-lg-4 stretch-card border-right border-bottom">
+                        <div class="social-box-item">
+                            <div class="box-body">
+                                <img src="images/social-icons/icon-facebook.png" alt="image" class="card-icon">
                                 <h4 class="mb-2 nice-title">Facebook</h4>
                                 <p class="card-text">
                                     Looking to get your Facebook Page to go crazy? At SMM.net we have all services to
@@ -132,10 +132,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 grid-margin stretch-card">
-                        <div class="card card-icon-top">
-                            <div class="card-body">
-                                <img src="http://buyrealfollowerz.com/images/icon-instagram.png" alt="image" class="card-icon">
+                    <div class="col-12 col-md-6 col-lg-4 stretch-card border-right border-bottom">
+                        <div class="social-box-item">
+                            <div class="box-body">
+                                <img src="images/social-icons/icon-instagram.png" alt="image" class="card-icon">
                                 <h4 class="mb-2 nice-title">Instagram</h4>
                                 <p class="card-text">
                                     Instagram is one of the best and hottest social networks around! Get in front of your
@@ -150,10 +150,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 grid-margin stretch-card">
-                        <div class="card card-icon-top">
-                            <div class="card-body">
-                                <img src="http://buyrealfollowerz.com/images/icon-twitter.png" alt="image" class="card-icon">
+                    <div class="col-12 col-md-6 col-lg-4 stretch-card border-bottom">
+                        <div class="social-box-item">
+                            <div class="box-body">
+                                <img src="images/social-icons/icon-twitter.png" alt="image" class="card-icon">
                                 <h4 class="mb-2 nice-title">Twitter</h4>
                                 <p class="card-text">
                                     Twitter is one of oldest social networks and probably the most serious when it comes to
@@ -169,10 +169,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 grid-margin stretch-card">
-                        <div class="card card-icon-top">
-                            <div class="card-body">
-                                <img src="http://buyrealfollowerz.com/images/icon-youtube.png" alt="image" class="card-icon">
+                    <div class="col-12 col-md-6 col-lg-4 stretch-card border-right">
+                        <div class="social-box-item">
+                            <div class="box-body">
+                                <img src="images/social-icons/icon-youtube.png" alt="image" class="card-icon">
                                 <h4 class="mb-2 nice-title">Youtube</h4>
                                 <p class="card-text">
                                     Everyday new Streamers and Youtubers popups up just like mushrooms! If you are looking
@@ -188,10 +188,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 grid-margin stretch-card">
-                        <div class="card card-icon-top">
-                            <div class="card-body">
-                                <img src="http://buyrealfollowerz.com/images/icon-soundcloud.png" alt="image" class="card-icon">
+                    <div class="col-12 col-md-6 col-lg-4 stretch-card border-right">
+                        <div class="social-box-item">
+                            <div class="box-body">
+                                <img src="images/social-icons/icon-soundcloud.png" alt="image" class="card-icon">
                                 <h4 class="mb-2 nice-title">Soundcloud & Spotify</h4>
                                 <p class="card-text">
                                     There is no doubt that the music industry is BIG! Step up your Soundcloud or Spotify
@@ -208,10 +208,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 grid-margin stretch-card">
-                        <div class="card card-icon-top">
-                            <div class="card-body">
-                                <img src="http://buyrealfollowerz.com/images/icon-question.png" alt="image" class="card-icon">
+                    <div class="col-12 col-md-6 col-lg-4 stretch-card">
+                        <div class="social-box-item">
+                            <div class="box-body">
+                                <img src="images/social-icons/icon-question.png" alt="image" class="card-icon">
                                 <h4 class="mb-2 nice-title">Want a specific service?</h4>
                                 <p class="card-text">
                                     We have hundreds of High Quality and nice SMM services to offer, in case you didnt
@@ -241,14 +241,14 @@
     </div>
 </section>
 
-<section class="why-us social-box pt-0" id="why-us" style="background-image: url('images/why-choose-bg.svg'); background-size:cover;">
+<section class="why-us social-box section" id="why-us" style="background-image: url('images/why-choose-bg.svg'); background-size:cover; background-position: center center;">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2 class="h1">
-                    Why to choose <span>SMM.net</span> for your <span>SMM Services</span>
+                <h2 class="h1 text-white">
+                    Why to choose SMM.net for your SMM Services
                 </h2>
-                <p class="w-75 mx-auto mb-5 mt-3">
+                <p class="w-75 mx-auto mb-5 mt-3 text-white">
                     Finding the best provider or SMM Panel that fits your agency needs can
                     be a tedious job! Check why you should trust SMM.net to delivery your social media services with a quick comparision.
                 </p>
@@ -256,7 +256,7 @@
             <div class="col-md-12 mx-auto">
                 <div class="row">
                     <div class="col-md-6 grid-margin stretch-card">
-                        <div class="card card-icon-top comparision">
+                        <div class="card card-icon-top comparision text-center">
                             <div class="comparision-us p-3">
                                 <h2><i class="fa fa-check-circle-o"></i> SMM.net</h2>
                             </div>
@@ -279,7 +279,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 grid-margin stretch-card">
-                        <div class="card card-icon-top comparision comparision_negative">
+                        <div class="card card-icon-top comparision comparision_negative text-center">
                             <div class="comparision-others p-3">
                                 <h2 class="nice-title"><i class="fa fa-5x fa-times-circle-o" style="font-size: 25px;"></i> Others</h2>
                             </div>
@@ -321,7 +321,7 @@
                 <div class="row pt-2 pb-2">
                     <div class="col-md-12 text-center">
                         <h2 class="h1 nice-title">
-                            <span>Safe</span> & <span>Quick</span> Purchase
+                            Safe & Quick Purchase
                         </h2>
                         <p class="w-75 mx-auto mb-5">
                             We take our costumers social media accounts as its our own accounts,
@@ -335,7 +335,7 @@
                     </div>
                     <div class="col-md-5">
                         <h2 class="mb-3">
-                            <span>Protecting</span> your Payments and
+                            Protecting your Payments and
                             Purchases
                         </h2>
                         <p>
@@ -352,7 +352,7 @@
                 </div>
                 <div class="row align-items-center py-5">
                     <div class="col-md-6 order-1 mr-auto">
-                        <h2 class="mb-3">Delivering <span>Fast</span> and the right
+                        <h2 class="mb-3">Delivering Fast and the right
                             way!
                         </h2>
                         <p>
@@ -387,7 +387,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2 class="h1 nice-title">The opinion of <span>costumers</span> matters!</h2>
+                <h2 class="h1 nice-title">The opinion of customers matters!</h2>
                 <p class="w-75 mx-auto mb-5">
                     Tired of looking at hundreds of panels with services that simple
                     doesn't work? Check our major services for social media with the best quality and quicker delivery on the market!
@@ -398,14 +398,14 @@
             <div class="col-12 col-md-6 col-lg-4 mb-4">
                 <div class="card testimonial-item">
                     <div class="card-body">
-                        <img src="http://buyrealfollowerz.com/images/person1.png" class="review-picture rounded-circle mb-2">
-                        <h4 class="card-title mb-2">Michelle Hawkins</h4>
+                        <img src="images/client-image/person1.png" class="review-picture rounded-circle mb-2">
+                        <h4 class="card-title mb-2">Rokin Ronin</h4>
                         <div class="reviews">
-                            <i class="mdi mdi-star"></i>
-                            <i class="mdi mdi-star"></i>
-                            <i class="mdi mdi-star"></i>
-                            <i class="mdi mdi-star"></i>
-                            <i class="mdi mdi-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
                         </div>
                         <p class="card-text">Wow! This is amazing, i have been purchasing Instagram Likes for over
                             a year and
@@ -416,14 +416,14 @@
             <div class="col-12 col-md-6 col-lg-4 mb-4">
                 <div class="card testimonial-item">
                     <div class="card-body">
-                        <img src="http://buyrealfollowerz.com/images/person2.png" class="review-picture rounded-circle mb-2">
-                        <h4 class="card-title mb-2">Peter Brown</h4>
+                        <img src="images/client-image/person2.png" class="review-picture rounded-circle mb-2">
+                        <h4 class="card-title mb-2">Jack Soma</h4>
                         <div class="reviews">
-                            <i class="mdi mdi-star"></i>
-                            <i class="mdi mdi-star"></i>
-                            <i class="mdi mdi-star"></i>
-                            <i class="mdi mdi-star"></i>
-                            <i class="mdi mdi-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
                         </div>
                         <p class="card-text">Purchased 2000 Facebook Likes for our company and worked indeed!
                             Support is also
@@ -434,14 +434,14 @@
             <div class="col-12 col-md-6 col-lg-4 mb-4">
                 <div class="card testimonial-item">
                     <div class="card-body">
-                        <img src="http://buyrealfollowerz.com/images/person3.png" class="review-picture rounded-circle mb-2">
-                        <h4 class="card-title mb-2">Carl Joe</h4>
+                        <img src="images/client-image/person3.png" class="review-picture rounded-circle mb-2">
+                        <h4 class="card-title mb-2">Charles Doe</h4>
                         <div class="reviews">
-                            <i class="mdi mdi-star"></i>
-                            <i class="mdi mdi-star"></i>
-                            <i class="mdi mdi-star"></i>
-                            <i class="mdi mdi-star"></i>
-                            <i class="mdi mdi-star-half"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star-half"></i>
                         </div>
                         <p class="card-text">Got my instagram followers as promised in time!</p>
                     </div>
@@ -453,8 +453,8 @@
   
 <footer class="container-fluid footer">
     <div class="row py-4 footer-bottom">
-        <div class="col-12 text-center mb-5">
-            <a href="#" class="footer-logo">
+        <div class="col-12 text-center mb-3">
+            <a href="#" class="footer-logo text-white">
                 SMM.NET
             </a>
         </div>
@@ -462,21 +462,21 @@
             <div class="container-fluid clearfix">
                 <div class="row">
                     <div class="col-md-12">
-                        <b>Our contacts: </b>
-                        <span><a href="skype:ssm.net?call" class="text-primary-theme"><i class="mdi mdi-skype"></i> Skype
+                        <b class="text-white">Our contacts: </b>
+                        <span><a href="skype:ssm.net?call"><i class="mdi mdi-skype"></i> Skype
                                 :
                                 ssm.net</a></span>
-                        <span><a href="mailto:SMM.net@gmail.com" class="text-primary-theme"><i class="mdi mdi-email"></i>
+                        <span><a href="mailto:SMM.net@gmail.com"><i class="mdi mdi-email"></i>
                                 Email :
                                 SMM.net@gmail.com</a></span>
                     </div>
                 </div>
                 <div class="row mt-4">
                     <div class="col-md-12">
-                        <span class="d-block text-center text-sm-left d-sm-inline-block">Copyright © 2018 <a href="/"
-                                class="text-primary-theme">SMM.net</a>.
+                        <span class="d-block text-center text-sm-left d-sm-inline-block text-white">Copyright © 2018 <a href="/"
+                                >SMM.net</a>.
                             All rights reserved.</span>
-                        <span><a href="terms-conditions.html" class="text-primary-theme">Terms of Service</a> | <a href="faq.html" class="text-primary-theme">Frequent
+                        <span><a href="terms-conditions.html">Terms of Service</a> | <a href="#" >Frequent
                                 Asked Questions</a></span>
                     </div>
                 </div>
